[package]
name = "libjsu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]



[build-dependencies]
tonic-build = { version = "0.5", features = ["prost", "compression"] }

[dependencies]

#[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

jni = { version = "0.19", default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"
ctor = "0.1"
libc = "0.2"
nix = "0.20"
prost = "0.8"
tonic = { features = ["tls", "compression"], version = "0.5" }
tonic-web = "0.1"
log-panics = "2.0.0"
once_cell = "1.8.0"
