cargo-features = ["strip"]

[package]
name = "libfastlane"
version = "0.1.0"
authors = ["wuhx <i@xun.im>"]
edition = "2018"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "s"
debug = 0
#https://doc.rust-lang.org/cargo/reference/profiles.html#debug
split-debuginfo = "unpacked"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost", "compression"] }
walkdir = "2.3"
zip = "0.5"
anyhow = "1.0"

[dev-dependencies]
log-rs = { git = "ssh://git@github.com/wuhx/log-rs.git", branch = "main" }



[dependencies]
jni = { version = "0.19", default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"
ctor = "0.1"
libc = "0.2"
nix = "0.20"

#bandwidth-rs = { git = "ssh://git@github.com/wuhx/bandwidth-rs.git", branch = "main" }
#bandwidth-rs = { path = "/Users/wuhx/project.d/bandwidth-rs"}
#redq-rs = { path="/Users/wuhx/project.d/redq-rs" }
#lwip-rs = { git = "ssh://git@github.com/wuhx/lwip-rs.git", branch = "main" }
#lwip-rs = { path = "/Users/wuhx/project.d/lwip-rs"}
#libadb-rs = { path = "/Users/wuhx/project.d/libadb-rs"}
#async-socks = { git = "ssh://git@github.com/wuhx/async-socks.git", branch = "main" }
futures = "0.3"
crossbeam-channel = "0.5"
once_cell = "1.7"
log-panics = "2.0"

#[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

#[target.'cfg(not(target_os = "android"))'.dependencies]
log-rs = { git = "ssh://git@github.com/wuhx/log-rs.git", branch = "main" }


prost = "0.8"
tonic = { features = ["tls", "compression"], version = "0.5" }
tonic-web = "0.1.0"

#tracing = "0.1"
#tracing-subscriber = "0.2"
bytes = "1.0"
#rusqlite = { version = "0.25", features = ["bundled","chrono"] }
chrono = "0.4"
tokio-stream = "0.1"
rand = "0.8"
sled = "0.34"
async-stream = "0.3"
warp = "0.3"
#protobuf = "2.22"
walkdir = "2.3"
zip = "0.5"
